[package]
name = "gh-backup"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
argh = "0.1.9"
reqwest = { version = "0.11.13", features = ["json"] }
git2 = "0.15"
tokio = { version = "1", features = ["full"] }
serde = "1.0.147"
serde_derive = "1.0.147"
futures-util = "0.3.25"
