[package]
name = "gh-backup"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Blazingly fast tool to backup a GitHub organisation"

[dependencies]
argh = "0.1"
reqwest = { version = "0.12", features = ["json"] }
git2 = { version = "0.18", default-features = false, features = ["https"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_derive = "1"
futures-util = "0.3"
